[package]
name = "philharmonic-connector-router"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-router"
description = "Per-realm HTTP dispatcher for the Philharmonic connector layer. Terminates TLS and forwards traffic to connector service instances inside the realm."

[dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
